tests/fixtures/valid/resources/views/valid-helper.blade.php
<?php

{{ config('app.valid_key') }}
