tests/fixtures/invalid/resources/views/invalid-nested-helper.blade.php
<?php

{{ config('app.nested.invalid_key') }}
